test/bad/classes/struct03.px

class Struct def
    Char c: 5
